force-app/main/default/objects/Training__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>training.Year__c + &apos;-&apos; + training.Month__c + &apos;-&apos; + training.Email__c + &apos;-&apos; + training.Training_Classification__c + &apos;-&apos; + training.Product_Line__c</description>
    <externalId>true</externalId>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>