force-app/main/default/objects/Training__c/fields/Pre_effective_Number__c.field-meta.xml
<CustomField>
    <fullName>Pre_effective_Number__c</fullName>
    <label>Pre-effective Number</label>
    <summaryFilterItems>
        <field>Training_Tasks__c.Status__c</field>
        <operation>equals</operation>
        <value>预有效</value>
    </summaryFilterItems>
    <summaryForeignKey>Training_Tasks__c.Training__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>