force-app/main/default/objects/Training__c/fields/Rate_of_Completion__c.field-meta.xml
<CustomField>
    <fullName>Rate_of_Completion__c</fullName>
    <formula>Effective_Number__c /  Task_Number__c</formula>
    <label>Rate of Completion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>