force-app/main/default/objects/Training__c/fields/RecordLink__c.field-meta.xml
<CustomField>
    <fullName>RecordLink__c</fullName>
    <formula>LEFT($Api.Enterprise_Server_URL_540, FIND( &apos;.my.salesforce.com/services&apos;,$Api.Enterprise_Server_URL_540))+ &apos;lightning.force.com/lightning/r/Training__c/&apos; +  CASESAFEID(Id ) + &apos;/view&apos;</formula>
    <label>RecordLink</label>
    <type>Text</type>
</CustomField>