force-app/main/default/objects/Training__c/fields/Training_Classification__c.field-meta.xml
<CustomField>
    <fullName>Training_Classification__c</fullName>
    <label>Training Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Training_Classification</valueSetName>
    </valueSet>
</CustomField>