force-app/main/default/objects/Training__c/validationRules/No_Email_In_SF.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Email_In_SF</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Trainer_Name__c )</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>The user does not exist</errorMessage>
</ValidationRule>