force-app/main/default/objects/Training__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Year__c</columns>
    <columns>Month__c</columns>
    <columns>Email__c</columns>
    <columns>Trainer_Name__c</columns>
    <columns>Training_Theme__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Task_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>